[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stateflow"
version = "0.1.0"
description = "A Hybrid Dynamical Systems Engine for Cellular State Modeling."
authors = [
    { name="Antigravity", email="user@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "diffrax>=0.5.0",
    "equinox>=0.11.0",
    "optax>=0.2.0"
]

[project.urls]
"Homepage" = "https://github.com/user/stateflow"
